# wordle_in_rust

./: .gitlab-ci.yml  Cargo.toml  HONOR-CODE.md  README.md  config.json  state.json
src/: builtin_words.rs  cli.rs  game.rs  main.rs  state.rs  status.rs
src/game/: common.rs  keyboard.rs  player.rs  word_set.rs
tests/: common.rs
